public enum EnemyType
{
    Basic,
    Fast,
    Tank,
    Ranged,
    Boss,
    Flying,
    Elite
} 